--- a/src/Footer.css
+++ b/src/Footer.css
@@ -2,7 +2,7 @@
 
 .footer {
     position: fixed;
-    display: flex;
+    display: none;
     justify-content: space-between;
     bottom: 0;
     height: 52px;
@@ -27,10 +27,12 @@
     font-weight: 500;
     margin-bottom: 5px;
     overflow: scroll;
+    cursor: pointer;
 }
 .footer__songInfo p {
     font-size: 10px;
     overflow: scroll;
+    cursor: pointer;
 }
 .footer__songInfo h4::-webkit-scrollbar {
     display: none;
@@ -84,4 +86,5 @@
     width: 60px;
     margin-right: 7px;
     object-fit: contain;
+    cursor: pointer;
 }
