--- a/src/Header.css
+++ b/src/Header.css
@@ -19,6 +19,7 @@
 .header__left input {
     border: none;
     width: 100%;
+    outline: none;
 }
 
 .header__right {
